<resources>
    <string name="app_name">MovieApp</string>
    <string name="search_button">Buscar</string>
    <string name="menu_button">Menu</string>
    <string name="app_title">Titulo</string>
    <string name="app_year">Año</string>
    <string name="app_time">Duracion</string>
    <string name="app_category">Categoria</string>
    <string name="app_description">Descripcion</string>
</resources>