<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">


    <LinearLayout
        android:id="@+id/top_navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:padding="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu"
            android:layout_weight="1"
            android:contentDescription="@string/menu_button"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_name"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search"
            android:layout_weight="1"
            android:contentDescription="@string/search_button"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_navigation_bar"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/featured_content"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/response_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/featured_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:text="@string/app_title"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/response_text_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/response_text_name"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:text="@string/app_year"
            android:textColor="@color/white"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/response_text_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/response_text_name"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/response_text_year"
            android:text="@string/app_time"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/response_text_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/response_text_name"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/response_text_time"
            android:text="@string/app_category"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/response_text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/response_text_category"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/response_text_time"
            android:text="@string/app_description"
            android:textColor="@color/white"
            android:textSize="15sp" />


    </RelativeLayout>


</RelativeLayout>
